[gd_scene load_steps=6 format=3 uid="uid://x0tek8t1bewj"]

[ext_resource type="Script" path="res://CPU_and_Player/player.gd" id="1_evqc0"]
[ext_resource type="Texture2D" uid="uid://wpqjamy8nklp" path="res://icon.svg" id="2_o20gk"]
[ext_resource type="Script" path="res://Josh_Test_Scenes/Player_Label.gd" id="3_vvddq"]
[ext_resource type="Script" path="res://CPU_and_Player/CardDisplayPlayer.gd" id="4_cqdm7"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_42imv"]
properties/0/path = NodePath("Sprite2D/Label:text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:pos")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:Health")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:action_points")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:WeaponDmg")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:WeaponStun")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:StunTracker")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:can_act")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath(".:WeaponRange")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath(".:FreeBrawl")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath(".:Name")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath(".:PlayerHand")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath(".:position")
properties/12/spawn = true
properties/12/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
position = Vector2(-13, -11)
collision_layer = 2
script = ExtResource("1_evqc0")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -8.0
offset_top = -10.0
offset_right = 9.0
offset_bottom = 7.0
texture = ExtResource("2_o20gk")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect"]
visibility_layer = 1023
layout_mode = 1
anchors_preset = -1
anchor_left = -0.529
anchor_top = -0.882
anchor_right = 1.696
offset_left = -0.00700665
offset_top = -0.00600719
offset_right = 25.168
offset_bottom = 7.99999
scale = Vector2(0.600638, 0.588601)
text = "Player X"
justification_flags = 161
script = ExtResource("3_vvddq")
metadata/_edit_use_anchors_ = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_42imv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_cqdm7")

[node name="Left" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 84.0
offset_top = 13.0
offset_right = 114.0
offset_bottom = 56.0
text = "L"

[node name="Right" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 342.0
offset_top = 13.0
offset_right = 372.0
offset_bottom = 56.0
text = "R"

[node name="Card1" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 119.0
offset_top = 3.0
offset_right = 185.0
offset_bottom = 68.0
texture = ExtResource("2_o20gk")
expand_mode = 1

[node name="Card2" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 195.0
offset_top = 3.0
offset_right = 261.0
offset_bottom = 68.0
texture = ExtResource("2_o20gk")
expand_mode = 1

[node name="Card3" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 269.0
offset_top = 3.0
offset_right = 334.0
offset_bottom = 69.0
texture = ExtResource("2_o20gk")
expand_mode = 1

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CanvasLayer/Left" to="CanvasLayer" method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/Right" to="CanvasLayer" method="_on_right_pressed"]
